<resources>
    <string name="app_name">Crypt Code</string>
    <string name="sub_app_name">Password Manager</string>
    <string name="scroll_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="settings">Settings</string>
    <string name="add_password">Add Password</string>
    <string name="auth_key_guard">Authentication</string>
    <string name="auth_msg">Authenticate to use this app</string>
    <string name="lock">Lock</string>
    <string name="empty_pass_list">This space is too empty, want to spice it up?</string>
    <string name="alias">Alias</string>
    <string name="show_preferences">Show Preferences</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="digitz">Digitz</string>
    <string name="special_characters">Special Characters</string>
    <string name="alphabets">Alphabets</string>
    <string name="generate_password">Generate Password</string>
    <string name="hide">Hide Preferences</string>
    <string name="password_length">Length</string>
    <string name="account_name">Account Name</string>
    <string name="decrypt">Decrypt</string>
    <string name="encrypt">Encrypt</string>
    <string name="hide_password">Hide</string>
    <string name="show_password">Show</string>
    <string name="password_encrypted">Password Encrypted</string>
    <string name="delete">Delete</string>
    <string name="backup_passwords">Backup Passwords</string>
    <string name="restore_password">Restore Password</string>
    <string name="refresh_list">Refresh List</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="encryption_status">Encryption Status</string>
    <string name="search">Search</string>
    <string name="copy_to_clipboard">Copy</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_message">This app will not recover you passwords when you loose you device.
        You can only recover the passwords on the same device.\n\n
        If you still want to continue please OK button, otherwise press CANCEL.
        Also keep the app so that you can receive updates for when I finally fix this.</string>
    <string name="search_title">Search Accounts</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="scan_the_qr_code_to_migrate_passwords">Scan the QR code to migrate passwords</string>
    <string name="unlock_premium">Unlock Premium</string>
    <string name="home">Home</string>
    <string name="show_passwords">Show Passwords</string>
    <string name="about">About</string>
    <string name="crypt_code_logo">Crypt Code Logo</string>
    <string name="password_icon">Password Icon</string>
    <string name="pro_mode">Buy Me Tea</string>
    <string name="learn_more">Learn More</string>
    <string name="password_limit_reached">You have reached the limit for the number of passwords or secret phrases.</string>
</resources>