<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="authViewModel"
            type="com.benatt.passwordsmanager.views.home.HomeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/crypt_code_logo"
            android:layout_marginBottom="20dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_sub_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_app_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="32dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_passwords"
            app:icon="@android:drawable/ic_menu_save"
            android:padding="16dp"
            android:layout_marginBottom="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_passwords"
            app:icon="@android:drawable/ic_menu_save"
            android:padding="16dp"
            android:layout_marginBottom="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore_password"
            android:drawableStart="@android:drawable/ic_menu_upload"
            android:padding="16dp"
            android:layout_marginBottom="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:drawableStart="@android:drawable/ic_menu_info_details" />

    </LinearLayout>
</layout>