<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="password"
            type="com.benatt.passwordsmanager.data.models.passwords.model.Password" />

        <variable
            name="addPasswordViewModel"
            type="com.benatt.passwordsmanager.views.addpassword.AddPasswordViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical"
            android:divider="@drawable/elements_vertical_divider_10dp"
            android:showDividers="middle">

            <LinearLayout
                android:id="@+id/ll_alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_account_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="true"
                        android:hint="@string/account_name"
                        android:inputType="text"
                        android:text="@={password.accountName}" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="5">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/ic_action_settings">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="true"
                        android:hint="@string/password"
                        android:inputType="textVisiblePassword"
                        android:text="@={password.cipher}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp">

                    <LinearLayout
                        android:id="@+id/ll_preferences"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_alphabets"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/alphabets" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_digits"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/digitz" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cb_special"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/special_characters" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password_length">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_length"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:autofillHints="true"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_set_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_gravity="end"
                            android:backgroundTint="@color/md_theme_tertiary"
                            android:text="@string/generate_password"
                            android:textColor="@color/md_theme_onTertiary" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_submit_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:text="@string/submit"
                    android:textSize="21sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_delete_password"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_delete_password"
                    style="@style/Widget.Material3.Button.IconButton.Filled"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight=".14"
                    android:backgroundTint="@color/md_theme_secondary"
                    app:cornerRadius="8dp"
                    app:icon="@drawable/ic_action_delete"
                    app:iconTint="@color/md_theme_onSecondary"
                    tools:visibility="visible"
                    app:layout_constraintStart_toEndOf="@+id/btn_submit_password"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</layout>